--- a/src/Sketch.WebApp/Components/SKDemoCanvas.razor
+++ b/src/Sketch.WebApp/Components/SKDemoCanvas.razor
@@ -1,21 +1,6 @@
 ﻿@inherits SKDemoCanvasComponent
-@inject Sketch.WebApp.Models.ISubscriptionModel Subscription
-@inject Sketch.WebApp.Models.IWhiteboardModel Whiteboard
 
 <div class="container-fluid">
-
-    <div class="row p-3">
-        <div class="form-group">
-            <h4>Group:</h4>
-            <select @onchange="OnChannelChanged">
-                <option value="" selected disabled hidden>None</option>
-                <option value="abc">Group 1</option>
-                <option value="123">Group 2</option>
-                <option value="def">Group 3</option>
-                <option value="456">Group 4</option>
-            </select>
-        </div>
-    </div>
 
     <div class="row p-3">
         <div class="form-group">
@@ -30,6 +15,7 @@
         <div class="form-group">
             <h4>Size: </h4>
             <input @bind="Thickness"
+                   @bind:event="oninput"
                    type="range" min="1" max="35" />
 
             <label>@Thickness</label>
@@ -40,46 +26,13 @@
     <div class="row p-3">
         <div class="form-group">
             <h4>Canvas:</h4>
-            <div style="border: 1px dotted black">
+            <div class="border">
                 <SKCanvas Width="640"
                           Height="480"
-                          @ref="_canvas"
                           Color="Color"
-                          Thickness="Thickness"
-                          OnAfterDraw="SendAsync">
-
+                          Thickness="Thickness">
                 </SKCanvas>
             </div>
         </div>
     </div>
 </div>
-
-@code{
-    private SKCanvas _canvas;
-
-    protected override void OnInitialized()
-    {
-        Whiteboard.OnReceive(ReceiveAsync);
-    }
-
-    protected async Task OnChannelChanged(ChangeEventArgs e)
-    {
-        await Subscription.SubscribeAsync((string)e.Value);
-    }
-
-    protected async Task SendAsync(LineEvent e)
-    {
-        await Whiteboard.SendAsync(new Stroke() {
-            Line = e.Line, Options = new StrokeOptions {
-                Color = Color, Thickness = Thickness } });
-    }
-
-    protected async Task ReceiveAsync(StrokeEvent e)
-    {
-        Color = e.Stroke.Options.Color;
-        Thickness = e.Stroke.Options.Thickness;
-
-        await InvokeAsync(() => StateHasChanged());
-        await _canvas.DrawAsync(e.Stroke.Line);
-    }
-}
