--- a/src/Sketch.WebApp/Pages/Index.razor
+++ b/src/Sketch.WebApp/Pages/Index.razor
@@ -1,3 +1,16 @@
 ﻿@page "/"
-<Sketch.WebApp.Components.SKChannel />
-<Sketch.WebApp.Components.SKDemoCanvas/>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col border-bottom">
+            <Sketch.WebApp.Components.SKChannel />
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <Sketch.WebApp.Components.SKDemoCanvas />
+        </div>
+        <div class="col-auto border-left p-3">
+            <Sketch.WebApp.Components.SKChat />
+        </div>
+    </div>
+</div>
