--- a/src/Sketch.WebApp/wwwroot/css/app.css
+++ b/src/Sketch.WebApp/wwwroot/css/app.css
@@ -1,4 +1,9 @@
-﻿#blazor-error-ui {
+﻿@import url('components/toolbox/SKBrushSlider.razor.css');
+@import url('components/toolbox/SKColor.razor.css');
+@import url('components/toolbox/SKColorPicker.razor.css');
+
+
+#blazor-error-ui {
     background: lightyellow;
     bottom: 0;
     box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.2);
