--- a/src/Sketch.WebApp/Pages/Index.razor
+++ b/src/Sketch.WebApp/Pages/Index.razor
@@ -1,16 +1,2 @@
 ﻿@page "/"
-<div class="container-fluid">
-    <div class="row">
-        <div class="col border-bottom">
-            <Sketch.WebApp.Components.SKChannel />
-        </div>
-    </div>
-    <div class="row">
-        <div class="col">
-            <Sketch.WebApp.Components.SKDemoCanvas />
-        </div>
-        <div class="col-auto border-left p-3">
-            <Sketch.WebApp.Components.SKChat />
-        </div>
-    </div>
-</div>
+<Sketch.WebApp.Views.MainView/>
