Refactored models and components and restructured file system

--- a/src/Sketch.WebApp/Areas/Tools/Pipette/Views/SKColor.razor
+++ b/src/Sketch.WebApp/Areas/Tools/Pipette/Views/SKColor.razor
@@ -6,10 +6,10 @@
          @onclick="OnClickAsync">
 
         <div class="sk-color-border"
-             style="background-color: @Shade.ToHexString()">
+             style="background-color: @(Shade.ToHexString())">
 
             <div class="sk-color"
-                 style="background-color: @Color.ToHexString()">
+                 style="background-color: @(Color.ToHexString())">
 
             </div>
         </div>
