--- a/src/Sketch.WebApp/Areas/Whiteboard/Views/SKCanvas.razor
+++ b/src/Sketch.WebApp/Areas/Whiteboard/Views/SKCanvas.razor
@@ -3,9 +3,9 @@
 
 <canvas width="@Width" height="@Height"
         @onmousemove="OnMouseMove"
-        @onmouseover="OnMouseMount"
-        @onmousedown="OnMouseMount"
-        @onmouseup="OnMouseMount"
+        @onmouseover="OnMouseInput"
+        @onmousedown="OnMouseInput"
+        @onmouseup="OnMouseInput"
         @ref="_canvasRef">
 
 </canvas>
