--- a/src/Sketch.WebApp/_Imports.razor
+++ b/src/Sketch.WebApp/_Imports.razor
@@ -9,3 +9,10 @@
 @using Blazor.Extensions 
 @using Blazor.Extensions.Canvas
 @using Blazor.Extensions.Canvas.Canvas2D
+
+@using Sketch.WebApp.Areas;
+@using Sketch.WebApp.Areas.Messaging
+@using Sketch.WebApp.Areas.Subscriptions
+@using Sketch.WebApp.Areas.Toolbox
+@using Sketch.WebApp.Areas.Tools
+@using Sketch.WebApp.Areas.Whiteboard   
