--- a/src/Sketch.WebApp/Areas/Tools/Pipette/Views/SKColorPicker.razor
+++ b/src/Sketch.WebApp/Areas/Tools/Pipette/Views/SKColorPicker.razor
@@ -5,10 +5,11 @@
     @foreach (var color in Colorants)
     {
         <div class="sk-color-picker-list">
-            @foreach (var mixture in GetColorPallette(color))
+            @foreach (var mixture in GetPalette(color))
             {
                 <SKColor Color="mixture"
-                         ColorSelected="SetPippeteColorAsync">
+                         ColorSelected="OnColorSelectedAsync">
+
                 </SKColor>
             }
         </div>
