Increase color picker size

--- a/src/Sketch.WebApp/Areas/Toolbox/Views/SKToolkit.razor
+++ b/src/Sketch.WebApp/Areas/Toolbox/Views/SKToolkit.razor
@@ -10,7 +10,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col">
+        <div class="col p-0">
 
             <h4>Color:</h4>
             <SKColorPicker />
