Add support for erasing from whiteboard

--- a/src/Sketch.WebApp/Areas/Toolbox/Views/SKToolkit.razor
+++ b/src/Sketch.WebApp/Areas/Toolbox/Views/SKToolkit.razor
@@ -4,6 +4,21 @@
     <div class="row">
         <div class="col p-0">
 
+            <h4>Modes:</h4>
+            <div class="row">
+                <div class="col-auto pr-1">
+                    <SKStylusBrushButton/>
+                </div>
+                <div class="col-auto pr-1">
+                    <SKStylusEraserButton/>
+                </div>
+            </div>
+
+        </div>
+    </div>
+    <div class="row">
+        <div class="col p-0">
+
             <h4>Thickness:</h4>
             <SKStylusSizeSlider MinValue="1" MaxValue="35"/>
 
