Restructure project files

--- a/src/Sketch.WebApp/Areas/Messages/Views/SKChat.razor
+++ b/src/Sketch.WebApp/Areas/Messages/Views/SKChat.razor
@@ -1,5 +1,5 @@
 ﻿@inherits SKChatComponent
-@namespace Sketch.WebApp.Areas.Messaging
+@namespace Sketch.WebApp.Areas.Messages
 
 <h4>Chat:</h4>
 <div class="form-group">
