--- a/src/Sketch.WebApp/Areas/Tools/Eraser/Views/SKEraserButton.razor
+++ b/src/Sketch.WebApp/Areas/Tools/Eraser/Views/SKEraserButton.razor
@@ -1,4 +1,4 @@
-﻿@inherits SKStylusEraserComponent
+﻿@inherits SKEraserComponent
 @namespace Sketch.WebApp.Areas.Tools
 
 <button class="btn btn-danger" @onclick="OnClickAsync">E</button>
