--- a/src/Sketch.WebApp/Areas/Toolbox/Views/SKToolkit.razor
+++ b/src/Sketch.WebApp/Areas/Toolbox/Views/SKToolkit.razor
@@ -7,10 +7,10 @@
             <h4>Modes:</h4>
             <div class="row">
                 <div class="col-auto pr-1">
-                    <SKStylusBrushButton/>
+                    <SKBrushButton/>
                 </div>
                 <div class="col-auto pr-1">
-                    <SKStylusEraserButton/>
+                    <SKEraserButton/>
                 </div>
             </div>
 
@@ -20,7 +20,7 @@
         <div class="col p-0">
 
             <h4>Thickness:</h4>
-            <SKStylusSizeSlider MinValue="1" MaxValue="35"/>
+            <SKSizeSlider MinValue="1" MaxValue="35"/>
 
         </div>
     </div>
