--- a/src/Sketch.WebApp/Areas/Tools/Brush/Views/SKBrushButton.razor
+++ b/src/Sketch.WebApp/Areas/Tools/Brush/Views/SKBrushButton.razor
@@ -1,4 +1,4 @@
-﻿@inherits SKStylusBrushComponent
+﻿@inherits SKBrushComponent
 @namespace Sketch.WebApp.Areas.Tools
 
 <button class="btn btn-primary" @onclick="OnClickAsync">B</button>
