--- a/src/Sketch.WebApp/_Imports.razor
+++ b/src/Sketch.WebApp/_Imports.razor
@@ -7,6 +7,7 @@
 @using Microsoft.JSInterop
 
 @using Sketch.WebApp.Areas;
+@using Sketch.WebApp.Areas.Configuration
 @using Sketch.WebApp.Areas.Messages
 @using Sketch.WebApp.Areas.Subscriptions
 @using Sketch.WebApp.Areas.Toolbox
