--- a/src/Sketch.WebApp/Areas/Toolbox/Views/SKToolkit.razor
+++ b/src/Sketch.WebApp/Areas/Toolbox/Views/SKToolkit.razor
@@ -12,6 +12,9 @@
                 <div class="col-auto pr-1">
                     <SKEraserButton/>
                 </div>
+                <div class="col-auto pr-1">
+                    <SKBucketButton/>
+                </div>
             </div>
 
         </div>
