Add Clear feature

--- a/src/Sketch.WebApp/Areas/Toolbox/Views/SKToolkit.razor
+++ b/src/Sketch.WebApp/Areas/Toolbox/Views/SKToolkit.razor
@@ -15,6 +15,9 @@
                 <div class="col-auto pr-1">
                     <SKBucketButton/>
                 </div>
+                <div class="col-auto pr-1">
+                    <SKTrashBin />
+                </div>
             </div>
 
         </div>
