Add whiteboard recording

--- a/src/Sketch.WebApp/Components/Tools/SKToolkit.razor
+++ b/src/Sketch.WebApp/Components/Tools/SKToolkit.razor
@@ -18,6 +18,9 @@
                 <div class="col-auto pr-1">
                     <SKTrashBin />
                 </div>
+                <div class="col-auto pr-1">
+                    <SKUndo />
+                </div>
             </div>
 
         </div>
