Add SKCanvas, Update Index.razor

--- a/src/Sketch.WebApp/_Imports.razor
+++ b/src/Sketch.WebApp/_Imports.razor
@@ -9,4 +9,6 @@
 @using Microsoft.JSInterop
 
 @using Sketch.Shared
+@using Sketch.Shared.Models
 @using Sketch.WebApp.Components
+@using Sketch.WebApp.Views
