Add Brush, Ereaser and PaintBucket components

--- a/src/Sketch.WebApp/Pages/Index.razor
+++ b/src/Sketch.WebApp/Pages/Index.razor
@@ -1,2 +1,11 @@
 ﻿@page "/"
-<SKCanvas Width="640" Height="480"/>
+<div class="sk-stack">
+    <div class="sk-stack-horizontal">
+        <SKBrushButton/>
+        <SKEraserButton/>
+        <SKPaintBucketButton/>
+    </div>
+    <div class="sk-stack">
+        <SKCanvas Width="640" Height="480" />
+    </div>
+</div>
