--- a/src/Sketch.WebApp/_Imports.razor
+++ b/src/Sketch.WebApp/_Imports.razor
@@ -9,6 +9,8 @@
 @using Microsoft.JSInterop
 
 @using Sketch.Shared
+@using Sketch.Shared.Data
 @using Sketch.Shared.Models
+
 @using Sketch.WebApp.Components
 @using Sketch.WebApp.Views
