Add SKChannelComponent, SKChannelSelection

--- a/src/Sketch.WebApp/Pages/Index.razor
+++ b/src/Sketch.WebApp/Pages/Index.razor
@@ -1,5 +1,8 @@
 ﻿@page "/"
 <div class="sk-stack">
+    <div class="sk-stack">
+        <SKChannelSelection/>
+    </div>
     <div class="sk-stack-horizontal">
         <SKBrushButton />
         <SKEraserButton />
