Fix namespace issues

--- a/src/Sketch.WebApp/Pages/Index.razor
+++ b/src/Sketch.WebApp/Pages/Index.razor
@@ -1,4 +1,6 @@
 ﻿@page "/"
+@inject IWhiteboardClient Whiteboard
+
 <div class="sk-stack">
     <div class="sk-stack">
         <SKChannelSelection/>
@@ -7,6 +9,7 @@
         <SKBrushButton />
         <SKEraserButton />
         <SKPaintBucketButton />
+        <button class="btn btn-warning" @onclick="UndoAsync">U</button>
     </div>
     <div class="sk-stack">
         <SKColorPicker Colorants="Colorants" Shades="2" Tints="2" />
@@ -36,5 +39,10 @@
         ColorPresets.Beige,
         ColorPresets.Brown
     });
+
+    private async Task UndoAsync()
+    {
+        await Whiteboard.UndoAsync(new Undo());
+    }
 
 }
