--- a/src/Sketch.WebApp/_Imports.razor
+++ b/src/Sketch.WebApp/_Imports.razor
@@ -8,8 +8,9 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 
-@using Sketch.Shared
-@using Sketch.Shared.Data
+@using Sketch.Shared.Data;
+@using Sketch.Shared.Data.Ink;
+@using Sketch.Shared.Data.Ink.Colors;
 @using Sketch.Shared.Models
 
 @using Sketch.WebApp.Components
