Update SKColorPicker, SKBrushSizeSlider

--- a/src/Sketch.WebApp/Views/ToolSettings/BrushPicker/SKBrushSizeSlider.razor
+++ b/src/Sketch.WebApp/Views/ToolSettings/BrushPicker/SKBrushSizeSlider.razor
@@ -1,4 +1,4 @@
-﻿@inherits SKBrushSizeComponent
+﻿@inherits SKBrushSettingsComponent
 @namespace Sketch.WebApp.Views
 
 <div class="sk-container">
@@ -7,6 +7,6 @@
            class="sk-input sk-input-slider" type="range"
            value="@MinValue" min="@MinValue" max="@MaxValue" />
 
-    @Value
+    @Size
 
 </div>
