--- a/src/Sketch.WebApp/Views/ToolSettings/ColorPicker/SKColor.razor
+++ b/src/Sketch.WebApp/Views/ToolSettings/ColorPicker/SKColor.razor
@@ -1,5 +1,4 @@
-﻿@inherits SKColorComponent
-@namespace Sketch.WebApp.Views
+﻿@namespace Sketch.WebApp.Views
 
 <div class="sk-container">
     <div class="sk-clickable"
