--- a/src/Sketch.WebApp/Views/ToolSettings/ColorPicker/SKColorPicker.razor
+++ b/src/Sketch.WebApp/Views/ToolSettings/ColorPicker/SKColorPicker.razor
@@ -1,4 +1,4 @@
-﻿@inherits SKColorPickerComponent
+﻿@inherits SKColorSettingsComponent
 @namespace Sketch.WebApp.Views
 
 <div class="sk-container">
