Add Components and Views for Chat, Messages, UserIdentity and Participants

--- a/src/Sketch.WebApp/Pages/Index.razor
+++ b/src/Sketch.WebApp/Pages/Index.razor
@@ -17,6 +17,15 @@
     <div class="sk-stack">
         <SKCanvas Width="640" Height="480" />
     </div>
+    <div class="sk-stack">
+        <div class="sk-stack">
+            <SKParticipantList/>
+        </div>
+        <div class="sk-stack">
+            <SKChat/>
+            <SKMessageList/>
+        </div>
+    </div>
 </div>
 
 
