--- a/src/Sketch.WebApp/Views/Messages/SKChat.razor
+++ b/src/Sketch.WebApp/Views/Messages/SKChat.razor
@@ -1,19 +1,13 @@
 ﻿@inherits SKChatComponent
 @namespace Sketch.WebApp.Views
 
-<div class="sk-stack">
-    <div class="form-group">
-        <label>Name:</label>
-        <SKUserIdentityForm />
-    </div>
-    <div class="form-group">
-        <label>Contents:</label>
+<div class="sk-stack-horizontal">
+    <div class="sk-stack-item-grow">
         <input class="form-control" @bind="Contents" />
     </div>
-    <div class="form-group">
-        <button class="btn btn-primary"
-                @onclick="OnClickAsync">
-            Send
+    <div class="sk-stack-item">
+        <button class="btn btn-primary px-2" @onclick="OnClickAsync">
+            <i class="fas fa-lg fa-share"></i>
         </button>
     </div>
 </div>
