--- a/src/Sketch.WebApp/Views/Messages/SKMessageListItem.razor
+++ b/src/Sketch.WebApp/Views/Messages/SKMessageListItem.razor
@@ -1,4 +1,14 @@
 ﻿@inherits ComponentBase
 @namespace Sketch.WebApp.Views
 
-<li>@Message.User.Name - @Message.Contents</li>
+<div class="sk-message-item-@(Owner ? "send" : "received")">
+    @if (!Owner)
+    {
+        <span>@Message.User.Name - @Message.Contents</span>
+    }
+    else
+    {
+        <span>@Message.Contents</span>
+    }
+
+</div>
