Use colored images for participants

--- a/src/Sketch.WebApp/Pages/Index.razor
+++ b/src/Sketch.WebApp/Pages/Index.razor
@@ -26,7 +26,15 @@
                      sk-stack-horizontal">
                     <div class="sk-primary-background">
                         <div class="h-100 border border-1">
-                            <SKParticipantList />
+                            <div class="sk-stack h-100">
+                                <div class="
+                                     sk-stack 
+                                     sk-stack-item-grow
+                                     sk-primary-background"
+                                     style="min-height:0;overflow-y:auto;overflow-x:hidden">
+                                    <SKParticipantList />
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="sk-secondary-background">
