--- a/src/Sketch.WebApp/Views/Participants/SKParticipantListItem.razor
+++ b/src/Sketch.WebApp/Views/Participants/SKParticipantListItem.razor
@@ -10,7 +10,7 @@
                  style="width:64px;height:64px">
                 <div class="position-absolute">
                     <div class="sk-primary-background border rounded-circle overflow-hidden">
-                        <img src="img/user.png" width="64" height="64" />
+                        <img src="img/user_@(value ??= random.Next(1, 6)).png" width="64" height="64" />
                     </div>
                 </div>
             </div>
